# promptune

./: Cargo.toml  README.md
.github/workflows/: ci.yml
data/prompts/: Rust_signatur  Rust_signature
examples/: basic.rs
src/: error.rs  lib.rs  main.rs  prompts.rs
